# PropertyModel

./: .gitignore  CMakeLists.txt  README.md  format.sh
lib/: CMakeLists.txt
lib/pmodel/algorithm/: blue.cpp  blue.hpp
lib/pmodel/graph/: constraint.cpp  constraint.hpp  constraint_graph.cpp  constraint_graph.hpp  method.cpp  method.hpp  utils.cpp  utils.hpp  variable.cpp  variable.hpp
lib/pmodel/property_model/: builder.cpp  builder.hpp  property_model.cpp  property_model.hpp
lib/pmodel/utils/: methods_helpers.hpp
src/: builder.hpp  constraint.cpp  constraint.hpp  constraint_graph.cpp  constraint_graph.hpp  main.cpp  method.cpp  methods_helpers.hpp  property_model.hpp  variable.cpp  variable.hpp
src/algorithm/: blue.cpp  blue.hpp
src/graph/: constraint.cpp  constraint.hpp  constraint_graph.cpp  constraint_graph.hpp  method.cpp  method.hpp  utils.cpp  utils.hpp  variable.cpp  variable.hpp
src/property_model/: builder.cpp  builder.hpp  property_model.cpp  property_model.hpp
tests/: CMakeLists.txt  test_property_model.cpp
